--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,12 +5,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
     />
-    <script
+    <!-- <script
       async
       defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAkhctyCGwBPnWX617w6g4x6WpeaCMVDLk&callback=initMap"
       type="text/javascript"
-    ></script>
+    ></script> -->
   </head>
   <body>
     <div id="root"></div>
